--- a/configure.ac
+++ b/configure.ac
@@ -7,9 +7,9 @@ define(_CLIENT_VERSION_PATCH, 0)
 define(_CLIENT_VERSION_BASE_STRING, ifelse(_CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION._CLIENT_VERSION_PATCH,0.0.0,_CLIENT_VERSION_MAJOR,ifelse(_CLIENT_VERSION_REVISION._CLIENT_VERSION_PATCH,0.0,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR,ifelse(_CLIENT_VERSION_PATCH,0,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION,_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION._CLIENT_VERSION_PATCH))))
 define(_CLIENT_VERSION_BUILD, 0)
 define(_CLIENT_VERSION_IS_RELEASE, true)
-define(_COPYRIGHT_YEAR, 2016)
+define(_COPYRIGHT_YEAR, 2021)
 define(_COPYRIGHT_HOLDERS,[The %s developers])
-define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[Bitcoin Core]])
+define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[Freicoin]])
 AC_INIT([Bitcoin Core],[_CLIENT_VERSION_BASE_STRING-_CLIENT_VERSION_BUILD],[https://github.com/bitcoin/bitcoin/issues],[bitcoin],[https://bitcoincore.org/])
 AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([src/config/bitcoin-config.h])
