[MergeMine] Add initial merge mining connection manager, based on the stratum server.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -106,6 +106,7 @@ BITCOIN_CORE_H = \
   limitedmap.h \
   main.h \
   memusage.h \
+  mergemine.h \
   merkleblock.h \
   miner.h \
   net.h \
@@ -178,6 +179,7 @@ libbitcoin_server_a_SOURCES = \
   dbwrapper.cpp \
   main.cpp \
   merkleblock.cpp \
+  mergemine.cpp \
   miner.cpp \
   net.cpp \
   noui.cpp \
