[MergeMine] Add initial merge mining connection manager, based on the stratum server.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,6 +107,7 @@ BITCOIN_CORE_H = \
   dbwrapper.h \
   limitedmap.h \
   memusage.h \
+  mergemine.h \
   merkleblock.h \
   miner.h \
   net.h \
@@ -187,6 +188,7 @@ libbitcoin_server_a_SOURCES = \
   init.cpp \
   dbwrapper.cpp \
   merkleblock.cpp \
+  mergemine.cpp \
   miner.cpp \
   net.cpp \
   net_processing.cpp \
